plugins {
    id "java"
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

dependencies {
    implementation "io.airlift:airline"
    implementation "commons-codec:commons-codec"
    implementation "ch.qos.logback:logback-classic"
    implementation project(":utils")
    testImplementation "org.junit.jupiter:junit-jupiter-api"
    testImplementation "org.assertj:assertj-core"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
